-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.9
-
None
-
-
5
-
adfa4cafd (dev)
Assert on/around line 5049 triggers:
// Adding likely-adjusted forms to system locale's list. // Insert just after the entry we're supplementing: Q_ASSERT(uiLanguages.at(i) == prior);
uiLanguages is QList("no", "en_US", "en", "nb"). Failing case is: prior = "nb" not matching uiLanguages.at( i ) = "no"
For Gerrit Dashboard: QTBUG-131127 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
603648,5 | Fix assertion failure in QLocale::uiLanguages() | dev | qt/qtbase | Status: MERGED | +2 | 0 |